Time: 25 ms (79.34%), Space: 50.5 MB (60.57%) - LeetHub